--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <h1>Homework JS module-7</h1>
+    <p>by Andrii Kylymnyk</p>
+
+    <!-- Task 1 -->
+    <h2>Task 1</h2>
     <ul id="categories">
       <li class="item">
         <h2>Животные</h2>
@@ -38,6 +44,27 @@
         </ul>
       </li>
     </ul>
+
+    <!-- Task 2 -->
+    <h2>Task 2</h2>
+    <ul id="ingredients"></ul>
+
+    <!-- Task 3 -->
+    <h2>Task 3</h2>
+    <ul id="gallery"></ul>
+
+    <!-- Task 4 -->
+    <h2>Task 4</h2>
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
+
+    <!-- Scripts -->
     <script src="/js/task-1.js" type="module"></script>
+    <script src="/js/task-2.js" type="module"></script>
+    <script src="/js/task-3.js" type="module"></script>
+    <script src="/js/task-4.js" type="module"></script>
   </body>
 </html>
