--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homework JS module 7 Andrii Kylymnyk</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
